objects/FSLABB_Product_Skill__c.object
<CustomObject>
    <description>created on 27.11.2018, for Implementation of FSL. It is related to Product2 object</description>
    <fields>
        <fullName>FSLABB_Product_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for FSL Implementation, Product Id</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Skills</relationshipLabel>
        <relationshipName>Product_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_SkillLevel__c</fullName>
        <description>for FSL Implementation: Skill level needed for the Product</description>
        <label>Skill Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSLABB_SkillName__c</fullName>
        <label>Skill</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_Skill_Id__c</fullName>
        <description>for FSL implementation: The Id which refers to the record in &apos;Skill&apos; object</description>
        <label>Skill Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Product Skill</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Product Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>